--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
         <script src="bundle.js" defer></script>
         <meta charset="UTF-8">
         <link rel="stylesheet" href= "css/bootstrap.min.css">
+        <link href="./css/main.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div id="application">
-
         </div>
         <script src="/bundle.js"></script>
     </body>
