--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href= "css/bootstrap.min.css">
         <link href="./css/main.css" rel="stylesheet" type="text/css">
     </head>
-    <body  class= "profile-container">
+    <body>
         <div id="application">
         </div>
         <script src="/bundle.js"></script>
